# yourls-python

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  gen_hash.py  main.py  pyproject.toml  requirements.txt  sample_data.sql  schema.sql  todo.md
scripts/: get_hash.py
src/: app.py
src/yourls_fastapi_adapter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: admin_index.html  base.html  edit_link.html  link_stats.html  login.html  stats.html  tools.html
templates/partials/: edit_form.html  table_row.html
tests/: conftest.py  test_app.py
